force-app/main/default/objects/numm__herokuSetting__c/numm__herokuSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Setting to allow salesforce to connect to heroku</description>
    <label>Heroku Setting</label>
</CustomObject>