force-app/main/default/objects/numm__herokuSetting__c/fields/numm__Password__c.field-meta.xml
<CustomField>
    <fullName>numm__Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>