force-app/main/default/objects/numm__herokuSetting__c/fields/numm__Url__c.field-meta.xml
<CustomField>
    <fullName>numm__Url__c</fullName>
    <label>Url</label>
    <type>Url</type>
</CustomField>