force-app/main/default/objects/numm__herokuSetting__c/fields/numm__Username__c.field-meta.xml
<CustomField>
    <fullName>numm__Username__c</fullName>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>